--- a/index.html
+++ b/index.html
@@ -130,16 +130,19 @@
       outline: none;
     }
 
-    /* Features section */
+    main {
+      max-width: 1200px;
+      margin: 0 auto 4rem;
+      flex-grow: 1;
+      padding: 0 1rem;
+    }
+
     .features {
       display: grid;
       grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
       gap: 2rem;
       padding: 4rem 2.5rem;
       background-color: #141414;
-      flex-grow: 1;
-      max-width: 1200px;
-      margin: 0 auto 4rem;
       border-radius: 20px;
       box-shadow: 0 0 25px rgba(0,0,0,0.6);
     }
@@ -175,7 +178,6 @@
       line-height: 1.5;
     }
 
-    /* Footer */
     footer {
       text-align: center;
       padding: 2.5rem 1rem;
@@ -186,10 +188,13 @@
       box-shadow: inset 0 1px 5px rgba(255,255,255,0.05);
     }
 
-    /* Responsive tweaks */
     @media (max-width: 480px) {
       header {
         padding: 80px 15px;
+      }
+
+      main {
+        padding: 0 0.5rem;
       }
 
       .features {
